# ComputerGraphics_HW01

./: CMakeLists.txt  README.md
src/: config.h  main.cpp  triangle.h
tests/: README.md  run_tests.ps1
